<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.bsommerfeld</groupId>
    <artifactId>pathetic-main</artifactId>
    <packaging>pom</packaging>
    <version>${revision}</version>

    <properties>
        <revision>5.0.0</revision>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <modules>
        <module>pathetic-api</module>
        <module>pathetic-bukkit</module>
        <module>pathetic-engine</module>
        <module>pathetic-bukkit/pathetic-example</module>
        <module>pathetic-bukkit/pathetic-provider</module>
        <module>pathetic-bukkit/pathetic-provider/paper</module>
        <module>pathetic-bukkit/pathetic-provider/spigot</module>
        <module>pathetic-bukkit/pathetic-provider/spigot/v1_8</module>
        <module>pathetic-bukkit/pathetic-provider/spigot/v1_12</module>
        <module>pathetic-bukkit/pathetic-provider/spigot/v1_15</module>
        <module>pathetic-bukkit/pathetic-provider/spigot/v1_16</module>
        <module>pathetic-bukkit/pathetic-provider/spigot/v1_17</module>
        <module>pathetic-bukkit/pathetic-provider/spigot/v1_18</module>
        <module>pathetic-bukkit/pathetic-provider/spigot/v1_18_R2</module>
        <module>pathetic-bukkit/pathetic-provider/spigot/v1_19_R2</module>
        <module>pathetic-bukkit/pathetic-provider/spigot/v1_19_R3</module>
        <module>pathetic-bukkit/pathetic-provider/spigot/v1_20_R1</module>
        <module>pathetic-bukkit/pathetic-provider/spigot/v1_20_R2</module>
        <module>pathetic-bukkit/pathetic-provider/spigot/v1_20_R3</module>
        <module>pathetic-bukkit/pathetic-provider/spigot/v1_20_R4</module>
        <module>pathetic-bukkit/pathetic-provider/spigot/v1_21_R1</module>
        <module>pathetic-bukkit/pathetic-provider/spigot/v1_21_R2</module>
        <module>pathetic-bukkit/pathetic-provider/spigot/v1_21_R3</module>
        <module>pathetic-bukkit/pathetic-provider/resolver</module>
        <module>pathetic-bukkit/pathetic-provider/spigot/v1_21_R4</module>
    </modules>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.11.2</version>
                <configuration>
                    <reportOutputDirectory>${project.reporting.outputDirectory}/myoutput</reportOutputDirectory>
                    <destDir>myapidocs</destDir>
                </configuration>
            </plugin>
        </plugins>
    </reporting>

    <repositories>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>de.bsommerfeld</groupId>
                <artifactId>pathetic-api</artifactId>
                <version>${revision}</version>
                <scope>provided</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>flatten-maven-plugin</artifactId>
                    <version>1.7.0</version>
                    <configuration>
                        <updatePomFile>true</updatePomFile>
                        <flattenMode>resolveCiFriendliesOnly</flattenMode>
                    </configuration>
                    <executions>
                        <execution>
                            <id>flatten</id>
                            <phase>process-resources</phase>
                            <goals>
                                <goal>flatten</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>flatten.clean</id>
                            <phase>clean</phase>
                            <goals>
                                <goal>clean</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.14.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>3.6.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <finalName>${project.name}</finalName>
        <defaultGoal>javadoc:javadoc</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.11.2</version>
                <configuration>
                    <source>8</source>
                    <reportOutputDirectory>../</reportOutputDirectory>
                    <destDir>javadoc</destDir>
                    <tags>
                        <tag>
                            <name>api.Note</name>
                            <placement>a</placement>
                            <head>API Note:</head>
                        </tag>
                        <tag>
                            <name>experimental</name>
                            <placement>a</placement>
                            <head>Experimental:</head>
                        </tag>
                        <tag>
                            <name>default</name>
                            <placement>a</placement>
                            <head>Default:</head>
                        </tag>
                        <tag>
                            <name>depending</name>
                            <placement>a</placement>
                            <head>Depends on:</head>
                        </tag>
                    </tags>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

</project>
